test/files/run/t9206.check

scala> val i: Int = "foo"
                    ^
       error: type mismatch;
        found   : String("foo")
        required: Int

scala> { val j = 42 ; val i: Int = "foo" + j }
                                         ^
       error: type mismatch;
        found   : String
        required: Int

scala> :quit
